[gd_scene load_steps=5 format=3 uid="uid://b178p8qoimpjm"]

[ext_resource type="Script" path="res://StartPanel.gd" id="1_bp2j4"]
[ext_resource type="Theme" uid="uid://b3rw843am1p5l" path="res://Art/UI/Button.tres" id="2_a8wtg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2f1x"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dyiv1"]
font_size = 40

[node name="StartPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bp2j4")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 651.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m2f1x")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 268.0
offset_top = 121.0
offset_right = 886.0
offset_bottom = 416.0
text = "TEST"
label_settings = SubResource("LabelSettings_dyiv1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="Button" type="Button" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 498.0
offset_top = 483.0
offset_right = 684.0
offset_bottom = 586.0
theme = ExtResource("2_a8wtg")
text = "START"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
